# ghostgpt

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  start_hidden.vbs
docker/: cloudflared.yml  entrypoint.sh  supervisord.conf
src/customgpts/: __init__.py  browser.py  cli.py  client.py  config.py  driver.py  schemas.py  selectors.py  server.py
src/ghostgpt/: __init__.py  browser.py  cli.py  client.py  config.py  driver.py  schemas.py  selectors.py  server.py
tests/: conftest.py  test_deployment.py
tests_http/: 01_extract_token.py  02_test_api.py  02b_test_api_curl.py  02c_test_requirements.py  03_test_conversation.py  04_test_followup.py  05_test_sse_capture.py  README.md
