[project]
name = "ghostgpt"
version = "0.1.0"
description = "A stealth ChatGPT web scraper using patchright + persistent Chromium profiles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "patchright>=1.49.0",
    "typer[all]>=0.12.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ghostgpt = "ghostgpt.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
